# pyackett

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/pyackett/: __init__.py  cli.py  pyackett.py
src/pyackett/api/: torznab.py
src/pyackett/core/: cache.py  categories.py  definitions_fetcher.py  http.py  manager.py  models.py
src/pyackett/definitions/: .pyackett_cache_a3975c0aeb27.pkl  iptorrents.yml
src/pyackett/engine/: cardigann.py  filters.py  selectors.py  template.py
src/pyackett/indexers/: base.py  iptorrents.py
src/pyackett/server/: app.py
tests/: test_definitions_fetcher.py  test_filters.py  test_models.py  test_selectors.py  test_template.py  test_torznab_api.py  test_unicode_regex.py  test_xml_parsing.py
